// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveFunds should not render qrcode without an address 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxgMl eUZgSO absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 transition-all duration-100 ease-linear rounded bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
      >
        <button
          class="sc-AxhCb hVGza-d w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Enter the amount you wish to transfer to this address and confirm
          </div>
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-AxmLO biuajz"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="inline-flex items-center"
                    />
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-AxirZ iQaTP"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="-space-x-2 whitespace-no-wrap"
              >
                <div
                  aria-label="ARK Devnet"
                  class="sc-AxheI etPkdG border-theme-primary-100 text-theme-primary-400"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt=""
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="sc-AxhCb bFynmq w-full mt-8"
              data-testid="ReceiveFunds__toggle"
              type="button"
            >
              Specify amount
            </button>
          </div>
          <div
            class="w-64 h-64 mx-auto mt-8"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render with a wallet name 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxgMl eUZgSO absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 transition-all duration-100 ease-linear rounded bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
      >
        <button
          class="sc-AxhCb hVGza-d w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Enter the amount you wish to transfer to this address and confirm
          </div>
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-AxmLO biuajz"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Name
                </div>
                <div
                  class="font-semibold"
                >
                  My Wallet
                </div>
              </div>
              <div
                aria-label="ARK Devnet"
                class="sc-AxheI etPkdG border-theme-primary-100 text-theme-primary-400"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-AxmLO biuajz"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        abc
                      </span>
                    </div>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-AxirZ iQaTP"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="-space-x-2 whitespace-no-wrap"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="abc"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                      title="abc"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="sc-AxhCb bFynmq w-full mt-8"
              data-testid="ReceiveFunds__toggle"
              type="button"
            >
              Specify amount
            </button>
          </div>
          <div
            class="w-64 h-64 mx-auto mt-8"
          >
            <img
              alt="QR Code"
              class="w-64 h-64 p-3 border rounded-lg border-theme-neutral-300 dark:border-theme-neutral-800"
              data-testid="ReceiveFunds__qrcode"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAAUmSURBVO3BgYkYOQAEwfZwiVjCyj8egZSK/wP4h1vw4vO4q759Hz9+ol/mns0TYy6euGfzljEXT9yzedOYC/0aQVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVO+Dh+7Z/E3GXPwt7tk8MebiiXs2b7pn8zcZc/FZQVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVO+Dl425+Eru2ei/jbl44p7Nn2zMxVdyz+YtQVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVO8D/Vb3bN405uKz7tmoU5BUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNX7QL/VmIsn7tm8ZczFm+7Z6PcIkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkeh+87J6N/t89mzfds9F/u2fztwiS6gVJ9YKkekFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6Hzw05kK/zpiLJ+7ZPDHm4rPu2Twx5uKJezZvGnOh/xYk1QuS6gVJ9YKkekFSvSCpXpBUL0iqFyTVC5LqBUn1vv38F5KqBUn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr1v38ePnzxwz+ZNYy70/+7ZPDHm4i33bJ4Yc/HEPZs3jbl44p7NE2MuvoogqV6QVC9Iqhck1QuS6gVJ9YKkekFSvSCpXpBUL0iq98HLxlx8Jfds3jTm4k1jLp64Z/NZYy6eGHOh3+eezWcFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvW/fx4+f6Je5Z/OnGnPxpns2bxpz8cQ9myfGXDxxz+aJMRdvCZLqBUn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfW+/fwXX8iYi6/kns2bxly86Z7NW8Zc/Mnu2bxpzMWb7tl8VpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNX74KExF0/cs/lK7tk8MebiiXs2T9yzeWLMxVvGXPxNxly86Z7NE2Munhhz8VlBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvSCpXpBU79vPf6HfZszFE/dsnhhz8Vn3bJ4Yc/GV3LN5YszFE/ds3jTm4ol7Np8VJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9b59Hz9+ol/mns0TYy6euGfzljEXT9yz+ZONuXjTPZuvIkiqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNULkup9+z5+/OSBezZ/kzEXT9yzeWLMxZvu2fypxlw8cc/mKxlz8aZ7Np8VJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9T542ZiLr+SezZ/sns2faszFm8ZcPHHP5k33bJ4Yc/HEmIvPCpLqBUn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHof6I8y5uIt92yeGHPxldyzedOYiyfu2Txxz+YtQVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVO8D/Vb3bJ4Yc/GWMRdfyT2bN425+ErGXLwlSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6n3wsns2+nXu2bxlzMWb7tm8aczFE/dsnhhz8cSYi68iSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6n37Pn78RL/MPZsnxlw8cc/mqxhz8aZ7Nk+MuXjTPZs/VZBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKr3D8bl8/cHO34bAAAAAElFTkSuQmCC"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render without a wallet name 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxgMl eUZgSO absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 transition-all duration-100 ease-linear rounded bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-neutral-800 dark:text-theme-neutral-600 dark:hover:bg-theme-neutral-700 dark:hover:text-theme-neutral-400"
      >
        <button
          class="sc-AxhCb hVGza-d w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Receive Funds
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Enter the amount you wish to transfer to this address and confirm
          </div>
          <div
            data-testid="ReceiveFunds__info"
          >
            <div
              class="sc-AxmLO biuajz"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral-700"
                >
                  Address
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="inline-flex items-center"
                    >
                      <span
                        class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        abc
                      </span>
                    </div>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-neutral-600"
                    >
                      <div
                        class="inline-block cursor-pointer"
                        data-testid="clipboard__wrapper"
                      >
                        <div
                          class="sc-AxirZ iQaTP"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="-space-x-2 whitespace-no-wrap"
              >
                <div
                  aria-label="ARK Devnet"
                  class="sc-AxheI etPkdG border-theme-primary-100 text-theme-primary-400"
                  data-testid="NetworkIcon-ARK-ark.devnet"
                >
                  <div
                    class="sc-AxirZ eEbZjj"
                    data-testid="NetworkIcon__icon"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ark.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="abc"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                      title="abc"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <button
              class="sc-AxhCb bFynmq w-full mt-8"
              data-testid="ReceiveFunds__toggle"
              type="button"
            >
              Specify amount
            </button>
          </div>
          <div
            class="w-64 h-64 mx-auto mt-8"
          >
            <img
              alt="QR Code"
              class="w-64 h-64 p-3 border rounded-lg border-theme-neutral-300 dark:border-theme-neutral-800"
              data-testid="ReceiveFunds__qrcode"
              src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAAUmSURBVO3BgYkYOQAEwfZwiVjCyj8egZSK/wP4h1vw4vO4q759Hz9+ol/mns0TYy6euGfzljEXT9yzedOYC/0aQVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVO+Dh+7Z/E3GXPwt7tk8MebiiXs2b7pn8zcZc/FZQVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVO+Dl425+Eru2ei/jbl44p7Nn2zMxVdyz+YtQVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVO8D/Vb3bN405uKz7tmoU5BUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNX7QL/VmIsn7tm8ZczFm+7Z6PcIkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkeh+87J6N/t89mzfds9F/u2fztwiS6gVJ9YKkekFSvSCpXpBUL0iqFyTVC5LqBUn1gqR6Hzw05kK/zpiLJ+7ZPDHm4rPu2Twx5uKJezZvGnOh/xYk1QuS6gVJ9YKkekFSvSCpXpBUL0iqFyTVC5LqBUn1vv38F5KqBUn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr1v38ePnzxwz+ZNYy70/+7ZPDHm4i33bJ4Yc/HEPZs3jbl44p7NE2MuvoogqV6QVC9Iqhck1QuS6gVJ9YKkekFSvSCpXpBUL0iq98HLxlx8Jfds3jTm4k1jLp64Z/NZYy6eGHOh3+eezWcFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvW/fx4+f6Je5Z/OnGnPxpns2bxpz8cQ9myfGXDxxz+aJMRdvCZLqBUn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfW+/fwXX8iYi6/kns2bxly86Z7NW8Zc/Mnu2bxpzMWb7tl8VpBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNX74KExF0/cs/lK7tk8MebiiXs2T9yzeWLMxVvGXPxNxly86Z7NE2Munhhz8VlBUr0gqV6QVC9Iqhck1QuS6gVJ9YKkekFSvSCpXpBU79vPf6HfZszFE/dsnhhz8Vn3bJ4Yc/GV3LN5YszFE/ds3jTm4ol7Np8VJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9b59Hz9+ol/mns0TYy6euGfzljEXT9yz+ZONuXjTPZuvIkiqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKoXJNULkup9+z5+/OSBezZ/kzEXT9yzeWLMxZvu2fypxlw8cc/mKxlz8aZ7Np8VJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6gVJ9T542ZiLr+SezZ/sns2faszFm8ZcPHHP5k33bJ4Yc/HEmIvPCpLqBUn1gqR6QVK9IKlekFQvSKoXJNULkuoFSfWCpHof6I8y5uIt92yeGHPxldyzedOYiyfu2Txxz+YtQVK9IKlekFQvSKoXJNULkuoFSfWCpHpBUr0gqV6QVO8D/Vb3bJ4Yc/GWMRdfyT2bN425+ErGXLwlSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6n3wsns2+nXu2bxlzMWb7tm8aczFE/dsnhhz8cSYi68iSKoXJNULkuoFSfWCpHpBUr0gqV6QVC9Iqhck1QuS6n37Pn78RL/MPZsnxlw8cc/mqxhz8aZ7Nk+MuXjTPZs/VZBUL0iqFyTVC5LqBUn1gqR6QVK9IKlekFQvSKr3D8bl8/cHO34bAAAAAElFTkSuQmCC"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
